Fixed misaligned flow labels in residual graph.

--- a/app.css
+++ b/app.css
@@ -8,10 +8,6 @@
   stroke: #666;
   stroke-width: 2px;
 }
-.residual .link text {
-  text-anchor: middle;
-  dominant-baseline: middle;
-}
 .flow .link.sending path{
   stroke-width: 3px;
   stroke: steelblue;
